tests/errors/brr-file-not-found.spcasmtest
org 0
brr "does-not-exist"
